--- a/mbt/.classpath
+++ b/mbt/.classpath
@@ -10,10 +10,10 @@
 	<classpathentry kind="lib" path="guava-14.0.1.jar"/>
 	<classpathentry kind="lib" path="jorlib-core-1.1.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="jorlib-core-1.1.1-sources.jar"/>
-	<classpathentry kind="lib" path="jorlib-core-1.1.1.jar"/>
+	<classpathentry kind="lib" path="jorlib-core-1.1.1.jar" sourcepath="jorlib-core-1.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="jorlib-demo-1.1.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="jorlib-demo-1.1.1-sources.jar"/>
-	<classpathentry kind="lib" path="jorlib-demo-1.1.1.jar"/>
+	<classpathentry kind="lib" path="jorlib-demo-1.1.1.jar" sourcepath="jorlib-demo-1.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="logback-classic-0.9.28.jar"/>
 	<classpathentry kind="lib" path="logback-core-0.9.28.jar"/>
 	<classpathentry kind="lib" path="slf4j.api-1.6.1.jar"/>
