--- a/mbt/.classpath
+++ b/mbt/.classpath
@@ -3,8 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="cplex.jar"/>
-	<classpathentry kind="lib" path="jgrapht-jdk1.6.jar"/>
-	<classpathentry kind="lib" path="jgraphx.jar"/>
 	<classpathentry kind="lib" path="javatuples-1.2.jar"/>
 	<classpathentry kind="lib" path="commons-collections4-4.1.jar"/>
 	<classpathentry kind="lib" path="guava-14.0.1.jar"/>
@@ -17,6 +15,16 @@
 	<classpathentry kind="lib" path="logback-classic-0.9.28.jar"/>
 	<classpathentry kind="lib" path="logback-core-0.9.28.jar"/>
 	<classpathentry kind="lib" path="slf4j.api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgraphx-2.0.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgrapht-io-1.1.0-uber.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgrapht-io-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgrapht-ext-1.1.0-uber.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgrapht-ext-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgrapht-demo-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgrapht-core-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/jgraph-5.13.0.0.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/commons-lang3-3.5.jar"/>
+	<classpathentry kind="lib" path="/home/ik/dev/svn/papers/trunk/minimum broadcast time/jgrapht-1.1.0/lib/antlr4-runtime-4.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
